added file views for download

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <title>Pi Video Surveillance</title>
+    <title>Video Surveillance</title>
   </head>
   <body>
-    <h1>Pi Video Surveillance</h1>
+    <h1>Video Surveillance</h1>
+    <a href="{{ url_for('download_file') }}">Test Download</a><br>
     <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
