--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Video Surveillance</h1>
-    <a href="{{ url_for('download_file') }}">Test Download</a><br>
+    <a href="{{ url_for('list_recordings') }}">Download Recordings</a><br>
     <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
